# project-backend

./: README.md
pax-saporis/: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
pax-saporis/apps/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
pax-saporis/apps/accounts/fixtures/: accounts.json
pax-saporis/apps/accounts/migrations/: 0001_initial.py
pax-saporis/apps/favorites/: admin.py  models.py  serializers.py  urls.py  views.py
pax-saporis/apps/favorites/migrations/: 0001_initial.py
pax-saporis/apps/ingredients/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
pax-saporis/apps/ingredients/fixtures/: ingredients.json
pax-saporis/apps/ingredients/migrations/: 0001_initial.py  0002_ingredient_calories_per_unit_and_more.py
pax-saporis/apps/lists/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
pax-saporis/apps/lists/migrations/: 0001_initial.py  0002_seed_builtin_lists.py
pax-saporis/apps/plans/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
pax-saporis/apps/plans/fixtures/: plans.json
pax-saporis/apps/plans/migrations/: 0001_initial.py
pax-saporis/apps/profiles/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
pax-saporis/apps/profiles/migrations/: 0001_initial.py  0002_alter_userprofile_dietary_restrictions.py
pax-saporis/apps/recipes/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
pax-saporis/config/: settings.py  urls.py
scripts/: docker-compose.yml  (+2 more)
(+7 files in other folders)
